Added first version of keyword processor.

--- a/test.tex
+++ b/test.tex
@@ -36,8 +36,8 @@ Jednotlivé odstavce oddělujeme od sebe prázdným řádkem. Prázdnými řádk
 vůbec nešetříme, protože zvyšují přehlednost zdrojového textu.
 Vyzkoušíme si nyní několik věcí.
 
-\begtt
-public class InputFile {
+\begtt java
+public \bf class InputFile {
     Logger logger = Logger.getLogger("InputFile");
     final static Charset ENCODING = StandardCharsets.UTF_8;
 
