Repaired tabular and verbatim processor.

--- a/test.tex
+++ b/test.tex
@@ -1,5 +1,3 @@
-\input opmac
-
 %%%%%%%% Zde začíná "oblast definic" pro tento dokument %%%%%%%%%%%
 
 \newcount\itemnum                % deklarace počítadla odrážek
@@ -37,7 +35,7 @@ vůbec nešetříme, protože zvyšují přehlednost zdrojového textu.
 Vyzkoušíme si nyní několik věcí.
 
 \begtt java
-public \bf class InputFile {
+public class InputFile {
     Logger logger = Logger.getLogger("InputFile");
     final static Charset ENCODING = StandardCharsets.UTF_8;
 
