--- a/temp.tex
+++ b/temp.tex
@@ -1,3 +1,16 @@
+
+\input opmac
+\def\codetexSpace #1 {
+	\dimen0 = #1pt
+	\dimen0 = 4\dimen0
+	\hskip \dimen0 \relax}
+\def\codetexNewline {\par}
+\def\bold #1 {{\bf #1}}
+\def\cyan #1 {{\localcolor \Cyan #1}}
+\def\grey #1 {{\localcolor \Grey #1}}
+\def\yellow #1 {{\localcolor \Yellow #1}}
+\def\red #1 {{\localcolor \Red #1}}
+\def\blue #1 {{\localcolor \Blue #1}}
 %%%%%%%% Zde začíná "oblast definic" pro tento dokument %%%%%%%%%%%
 
 \newcount\itemnum                % deklarace počítadla odrážek
@@ -34,49 +47,47 @@ Jednotlivé odstavce oddělujeme od sebe prázdným řádkem. Prázdnými řádk
 vůbec nešetříme, protože zvyšují přehlednost zdrojového textu.
 Vyzkoušíme si nyní několik věcí.
 
-\begtt java
-public class InputFile {
-    Logger logger = Logger.getLogger("InputFile");
-    final static Charset ENCODING = StandardCharsets.UTF_8;
-
-    private String fileName = "";
-    private Path path;
-    private BufferedReader reader = null;
-    private boolean end = false;
-
-    public InputFile(String fileName) throws IOException {
-        logger.debug("Openning file in constructor...");
-        this.fileName = fileName;
-        this.path=Paths.get(this.fileName);
-        reader=Files.newBufferedReader( path, ENCODING );
-    }
-
-    /**
-     * Read one line from file.
-     *
-     * @return String filled with one line.
-     */
-    public String readLine() {
-        logger.debug("Reading line. End=" + end);
-        String line = null;
-
-        try {
-            if (!end) {
-                line = reader.readLine();
-            }
-        } catch (IOException e) {
-            logger.error("Could not read line. " + e);
-            e.printStackTrace();
-        }
-
-        if(line == null) {
-            end = true;
-        }
-
-        return line;
-    }
-}
-\endtt
+\codetexSpace{0} public class InputFile $\{$\codetexNewline
+\codetexSpace{4} Logger logger = Logger.getLogger("InputFile");\codetexNewline
+\codetexSpace{4} final static Charset ENCODING = StandardCharsets.UTF\_8;\codetexNewline
+\codetexSpace{4} \codetexNewline
+\codetexSpace{4} private String fileName = "";\codetexNewline
+\codetexSpace{4} private Path path;\codetexNewline
+\codetexSpace{4} private BufferedReader reader = null;\codetexNewline
+\codetexSpace{4} private boolean end = false;\codetexNewline
+\codetexSpace{4} \codetexNewline
+\codetexSpace{4} public InputFile(String fileName) throws IOException $\{$\codetexNewline
+\codetexSpace{8} logger.debug("Openning file in constructor...");\codetexNewline
+\codetexSpace{8} this.fileName = fileName;\codetexNewline
+\codetexSpace{8} this.path=Paths.get(this.fileName);\codetexNewline
+\codetexSpace{8} reader=Files.newBufferedReader( path, ENCODING );\codetexNewline
+\codetexSpace{8} $\}$\codetexNewline
+\codetexSpace{4} \codetexNewline
+\codetexSpace{4} /**\codetexNewline
+\codetexSpace{4} * Read one line from file.\codetexNewline
+\codetexSpace{4} *\codetexNewline
+\codetexSpace{4} * @return String filled with one line.\codetexNewline
+\codetexSpace{4} */\codetexNewline
+\codetexSpace{4} public String readLine() $\{$\codetexNewline
+\codetexSpace{8} logger.debug("Reading line. End=" + end);\codetexNewline
+\codetexSpace{8} String line = null;\codetexNewline
+\codetexSpace{8} \codetexNewline
+\codetexSpace{8} try $\{$\codetexNewline
+\codetexSpace{12} if (!end) $\{$\codetexNewline
+\codetexSpace{16} line = reader.readLine();\codetexNewline
+\codetexSpace{16} $\}$\codetexNewline
+\codetexSpace{12} $\}$ catch (IOException e) $\{$\codetexNewline
+\codetexSpace{12} logger.error("Could not read line. " + e);\codetexNewline
+\codetexSpace{12} e.printStackTrace();\codetexNewline
+\codetexSpace{12} $\}$\codetexNewline
+\codetexSpace{8} \codetexNewline
+\codetexSpace{8} if(line == null) $\{$\codetexNewline
+\codetexSpace{12} end = true;\codetexNewline
+\codetexSpace{12} $\}$\codetexNewline
+\codetexSpace{8} \codetexNewline
+\codetexSpace{8} return line;\codetexNewline
+\codetexSpace{8} $\}$\codetexNewline
+\codetexSpace{4} $\}$\codetexNewline
 
 \itemskip
 \bod Budeme používat české \uv{uvozovky}, které se liší od ``anglických''.
@@ -104,3 +115,4 @@ public class InputFile {
 
 To by pro začátek stačilo. Příkazem {\tt\char`\\bye} ukončíme své pokusy.
 \bye
+
