--- a/test.tex
+++ b/test.tex
@@ -35,6 +35,7 @@ vůbec nešetříme, protože zvyšují přehlednost zdrojového textu.
 Vyzkoušíme si nyní několik věcí.
 
 \begtt java
+# $ % & \ ^ _ { }  < > ~
 public class InputFile {
     Logger logger = Logger.getLogger("InputFile");
     final static Charset ENCODING = StandardCharsets.UTF_8;
@@ -60,13 +61,14 @@ public class InputFile {
         logger.debug("Reading line. End=" + end);
         String line = null;
 
-        try {
+        try { /* Nějak vnoženy
+		komentar */ Sad
             if (!end) {
                 line = reader.readLine();
             }
         } catch (IOException e) {
             logger.error("Could not read line. " + e);
-            e.printStackTrace();
+            e.printStackTrace(); // Line comment test
         }
 
         if(line == null) {
