--- a/test/test.tex
+++ b/test/test.tex
@@ -79,6 +79,8 @@ public class InputFile {
 }
 \endtt
 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida porttitor dolor, vitae elementum turpis maximus at. Proin malesuada lorem ac mollis venenatis. Duis efficitur nisl ipsum. Fusce imperdiet ullamcorper rhoncus. Donec eu interdum lacus, quis fermentum nisi. Duis placerat leo velit. Nulla facilisi. Vestibulum vel feugiat lorem. Donec euismod, sem nec convallis facilisis, nisi felis rhoncus ligula, et rutrum augue eros finibus ligula. Vivamus nec velit congue, maximus lectus ac, venenatis lectus. Maecenas in nunc at velit sodales mollis. Vestibulum sit amet ligula purus. Nullam massa nibh, vestibulum at ultricies ac, fringilla vel libero.
+
 \itemskip
 \bod Budeme používat české \uv{uvozovky}, které se liší od ``anglických''.
      Uvědomíme si, že použití "těchto znaků" je úplně špatně!
@@ -100,6 +102,80 @@ public class InputFile {
 \bod Protože \% uvozuje komentář a \$ přepíná do matematické sazby,
      musíme před ně napsat zpětné lomítko, chceme-li je dostat do dokumentu.
 \itemskip
+
+Curabitur quis pulvinar urna. Aenean nec tempus felis. Nunc ullamcorper nunc eget ipsum sodales, vitae mattis urna vulputate. Integer pretium tincidunt mauris in condimentum. Duis vitae elementum diam. Aliquam erat volutpat. Cras volutpat commodo felis, et ultricies purus rutrum a. Nam rutrum consectetur nulla vel tincidunt. Phasellus sit amet elit ac justo pulvinar congue. Nam lacinia, massa quis aliquam volutpat, erat eros placerat est, vel maximus ipsum tortor at sem. Vestibulum pretium, metus sit amet scelerisque imperdiet, libero odio viverra velit, sit amet consectetur lectus ante ac dolor. Maecenas eu euismod ligula. Praesent a tincidunt magna.
+
+\begtt php
+class DefaultController extends Controller
+{
+
+    /**
+     * @Route("/twig", name="twigexample")
+     * @Template()
+     */
+    public function twigExampleAction() {
+        return array(
+            'page_title' => "Twig example page!",
+            'user' => new User("Nikdo"));
+    }
+
+    /**
+     * Request
+     * Data z requsetu lze snadno načís pomocí parametru, který není specifikován v url, ale jen jako parametr,
+     * který je dodán automaticky.
+     * Lze to i získat v templatu pomocí {{ app.request.query.get('page') }} nebo {{ app.request.request.get('page') }}.
+     *
+     * @Route("/requestInfo", name="request")
+     */
+    public function requestAction(Request $request)
+    {
+        // is it an Ajax request?
+        $isAjax = $request->isXmlHttpRequest();
+
+        // what's the preferred language of the user?
+        $language = $request->getPreferredLanguage(array('en', 'fr'));
+
+        // get the value of a $_GET parameter
+        $pageName = $request->query->get('page');
+
+        // get the value of a $_POST parameter
+        $pageName = $request->request->get('page');
+
+        //return new Response("Is ajax? $isAjax  Language? $language");
+        return $this->render('default/hello.html.twig', array(
+            'name' => $language
+        ));
+    }
+
+    /**
+     * Session
+     * Symfony poskytuje snadnou správu session pomocí requestu.
+     * Flash zprávu lze zobrazit i rovnou templatu pomocí {{ app.session.flashbag.get('notice') }}.
+     *
+     * @Route("/session", name="session")
+     */
+    public function sessionAction(Request $request)
+    {
+        $session = $request->getSession();
+
+        // store an attribute for reuse during a later user request
+        $session->set('foo', 'bar');
+
+        // get the value of a session attribute
+        $foo = $session->get('foo');
+
+        // use a default value if the attribute doesn't exist
+        $foo = $session->get('foo', 'default_value');
+
+        // store a message for the very next request
+        $this->addFlash('notice', 'Congratulations, your action succeeded!');
+
+        return $this->render('default/hello.html.twig', array(
+            'name' => $foo
+        ));
+    }
+}
+\endtt
 
 \nadpis Závěr
 
